dateview.html を更新

--- a/dateview.html
+++ b/dateview.html
@@ -857,40 +857,39 @@ bar.querySelectorAll('[data-role="dept"]').forEach(btn=>{
     const dept = btn.getAttribute('data-dept');
     const isActive = btn.classList.toggle('active');
 
+    // ▼ 部署セットの更新
     if (isActive) {
-      // ✅ 部署を選択：展開して配下を表示
       selectedDepts.add(dept);
       focusedDept = dept;
-      renderExpandPanel(dept);
-      applyWorst3LineRanks?.(dept); // 関数がある場合だけ呼ぶ
     } else {
-      // ❌ 部署を解除：配下のライン/整理No選択もクリアし、展開パネルを閉じる
       selectedDepts.delete(dept);
-
-      // 部署にぶら下がるキーを削除
-      for (const key of [...selectedLines]) {
-        if (key.startsWith(`${dept}||`)) selectedLines.delete(key);
-      }
-      for (const key of [...selectedSerials]) {
-        if (key.startsWith(`${dept}||`)) selectedSerials.delete(key);
-      }
-
-      // 展開UIを閉じて初期化
       if (focusedDept === dept) focusedDept = null;
-      const panel = document.getElementById('expandPanel');
-      const linesGrid = document.getElementById('linesGrid');
-      const serialsGrid = document.getElementById('serialsGrid');
-      const serialsHolder = document.getElementById('serialsHolder');
-      const selCounter = document.getElementById('selCounter');
-
-      panel.classList.remove('open');
-      linesGrid.innerHTML = '';
-      serialsGrid.innerHTML = '';
-      serialsHolder.style.display = 'none';
-      if (selCounter) selCounter.textContent = '';
     }
 
-    // 件数・テーブル・スパークを更新
+    // ★ 重要：部署の選択が変わったら配下選択を必ずクリア（過去選択が残ってANDで詰むのを防止）
+    selectedLines.clear();
+    selectedSerials.clear();
+
+    // 展開パネルも初期化してから、必要なら再描画
+    const panel        = document.getElementById('expandPanel');
+    const linesGrid    = document.getElementById('linesGrid');
+    const serialsGrid  = document.getElementById('serialsGrid');
+    const serialsHolder= document.getElementById('serialsHolder');
+    const selCounter   = document.getElementById('selCounter');
+
+    panel.classList.remove('open');
+    linesGrid.innerHTML = '';
+    serialsGrid.innerHTML = '';
+    serialsHolder.style.display = 'none';
+    if (selCounter) selCounter.textContent = '';
+
+    // 選択状態に応じて展開パネル再描画
+    if (isActive) {
+      renderExpandPanel(dept);
+      applyWorst3LineRanks?.(dept); // あれば実行
+    }
+
+    // 件数・テーブル・スパーク更新
     applyFilters();
     drawAllSparklines();
   });
