--- a/dateview.html
+++ b/dateview.html
@@ -335,7 +335,7 @@
 <body>
   <div class="header">
     <div class="header-content">
-      <h1>📊 異常履歴データシート（サイズ2.5×／ダークモード）</h1>
+      <h1>📊 異常履歴データシート</h1>
       <div class="header-actions">
         <button class="btn-header" id="btnTheme">🌙 ダーク</button>
         <button class="btn-header" id="btnSizeSettings">🅰️ サイズ設定</button>
