--- a/dateview.html
+++ b/dateview.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>異常履歴データシート（サイズ上限2.5×＋重なり解消＋ダークモード）</title>
+<title>異常履歴データシート</title>
 <style>
   :root{
     /* サイズ可変 既定値 */
