--- a/dateview.html
+++ b/dateview.html
@@ -556,8 +556,8 @@
   let filteredData = [];
   let dateFromStr = null, dateToStr = null;
 
-  let sparkMode = '7d';
-  let lastManualSparkMode = '7d';
+  let sparkMode = '24h';
+  let lastManualSparkMode = '24h';
   let autoRangeActive = false;
 
   let viewMode = 'total';
@@ -1882,7 +1882,7 @@
   document.getElementById('mode7').addEventListener('click', ()=>setManualMode('7d'));
   document.getElementById('mode30').addEventListener('click',()=>setManualMode('30d'));
   document.getElementById('mode24').addEventListener('click',()=>setManualMode('24h'));
-  setManualMode('7d');
+  setManualMode('24h');
 
   function setViewMode(mode){
     viewMode = mode;
