dateview.html を更新

--- a/dateview.html
+++ b/dateview.html
@@ -581,14 +581,16 @@
     { id:'handler', label:'処置者', sortable:true },
     { id:'anomalyContent', label:'異常内容', sortable:false },
     { id:'actionTaken', label:'対応内容', sortable:false },
+    { id:'rootCauseAction', label:'技術対応内容', sortable:false },
     { id:'photos', label:'写真', sortable:false },
     { id:'status', label:'状態', sortable:true }
   ];
 
-  const DEFAULT_COLUMNS = [
-    'serialNo','department','lineName',
-    'occurrenceDate','occurrenceTime',
-    'stopMinutes','handler','photos','status'
+  const DEFAULT_COLUMNS = ['department',
+     'occurrenceDate','occurrenceTime','lineName',
+    'serialNo','anomalyContent','actionTaken',
+   'rootCauseAction',
+    'stopMinutes'
   ];
   
   let visibleColumns = [...DEFAULT_COLUMNS];
