dateview.html を更新

--- a/dateview.html
+++ b/dateview.html
@@ -766,6 +766,15 @@
       const raw={_id:doc.id, ...doc.data()};
       const deptNorm=normalizeDeptName(raw.department);
       const lineNorm=normalizeLineName(raw.lineName);
+const rootCauseAction =
+raw.rootCauseAction ??
+raw.techAction ??
+raw.techResponse ??
+raw.techRootCause ??
+raw.countermeasure ??
+raw.qualityRootCauseAction ??
+null;
+
 
       const occSource = raw.occurrenceDate ?? raw.occurrence_at ?? raw.date ?? raw.createdAt ?? raw.updatedAt;
       const occ      = parseDateFlexible(occSource);
