dateview.html を更新

--- a/dateview.html
+++ b/dateview.html
@@ -792,6 +792,7 @@ null;
       }
       return {
         ...raw,
+        rootCauseAction,
         departmentNormalized:deptNorm,
         lineNameNormalized:lineNorm,
         occurrenceDateISO:occ.iso,
