--- a/abnreports.html
+++ b/abnreports.html
@@ -1248,7 +1248,7 @@ document.getElementById('btnClearFilter').addEventListener('click', async () => 
    const HEADER_MAP = {
     '整理No':'serialNo','部署':'department','ライン名':'lineName','発生日':'occurrenceDate',
     '発生時刻':'occurrenceTime','再開時刻':'restartTime','異常内容':'anomalyContent','対応内容':'actionTaken',
-    '遡り':'traceback','品質対応':'qualityResponse','処置者':'handler','技術対応':'techRequest','技術対応区分':'techRequest',
+    '遡り':'traceback','品質対応':'qualityResponse','処置者':'handler','技術対応':'techRequest','技術技術内容有無':'techRequest',
     '技術処置者':'techHandler','発見タイミング':'discoveryTiming','前回終物確認':'previousCheck',
     '命数有無':'lifespan','命数到達':'lifespanReached','保全単位':'maintenanceUnit',
     '技術対応内容':'rootCauseAction','再発新規':'recurrenceType','対策状況':'measureStatus',
@@ -1281,7 +1281,7 @@ document.getElementById('btnClearFilter').addEventListener('click', async () => 
 const headers = [
   '整理No','部署','ライン名','発生日','発生時刻','再開時刻','停止時間(分)',
   '異常内容','対応内容','遡り','処置者',
-  '技術対応区分','技術処置者','発見タイミング','前回終物確認',
+  '技術技術内容有無','技術処置者','発見タイミング','前回終物確認',
   '命数有無','命数到達','保全単位',
   '技術対応内容','再発新規','対策状況','暫定','状態','_id'
 ];
@@ -1294,7 +1294,7 @@ const rows = anomalyCache.map(item=>{
     item.occurrenceDate||'', item.occurrenceTime||'', item.restartTime||'',
     (stopMin!==null?stopMin:''),
     item.anomalyContent||'', item.actionTaken||'', item.traceback||'',　item.qualityResponse||'', item.handler||'',
-    // 技術対応区分
+    // 技術技術内容有無
     item.techRequest==='要請'?'技術対応あり':item.techRequest==='完結'?'完了':'',
     item.techHandler||'', item.discoveryTiming||'', item.previousCheck||'',
     item.lifespan||'', item.lifespanReached||'', item.maintenanceUnit||'',
